Initial Backbone structure in place, ready to grow

--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -1,6 +1,7 @@
 <div class="navigation-bar">
     <div class="umovie-logo">
-        The logo comes here!!
+        <span id="expend-menu-icon"></span>
+        <img id="site-logo" src="url({{siteImageUrl}}">
     </div>
     <div class="menu">
         <div>Welcome, {{user}}!</div>
