Start of authentification system

--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -12,7 +12,8 @@
         </ul>
     </div>
     <div class="search-bar">
-        Search bar comes here!
+        <input class="search-input"><a href="#">Search!</a>
+        <div>test!</div>
     </div>
 </div>
 
