--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -13,7 +13,7 @@
     </div>
     <div class="search-bar">
         <input class="search-input"><a href="#">Search!</a>
-        <div>test!</div>
+        <div class="research-options collapsed">Advanced research</div>
     </div>
 </div>
 
