--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -1,4 +1,4 @@
-<div class="carousel">Top 10 movies carousel</div>
+<div class="carousel"> movies carousel</div>
 <div class="movie-browser">
     <h1>{{title}}</h1>
     <div class="favorite">{{movie}}</div>
