--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -1,7 +1,7 @@
 <div class="navigation-bar">
     <div class="umovie-logo">
         <span id="expend-menu-icon"></span>
-        <a href="#/{{references}}"><img id="site-logo" src="url({{siteImageUrl}}"></a>
+        <a href="/{{references}}"><img id="site-logo" src="url({{siteImageUrl}}"></a>
         <div>Welcome, {{user}}!</div>
     </div>
     <div class="menu">
