I think I broke webstorm...

--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -1,13 +1,13 @@
 <div class="navigation-bar">
     <div class="umovie-logo">
         <span id="expend-menu-icon"></span>
-        <a href="/{{references}}"><img id="site-logo" src="url({{siteImageUrl}}"></a>
+        <a href="{{references}}"><img id="site-logo" src="url({{siteImageUrl}}"></a>
         <div>Welcome, {{user}}!</div>
     </div>
     <div class="menu">
         <ul class="navigation-options">
             {{#each menuOption}}
-            <li><a href="#/{{references}}">{{name}}</a></li>
+            <li><a href="{{references}}">{{name}}</a></li>
             {{/each}}
         </ul>
     </div>
