start of revert to the href

--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -15,7 +15,7 @@
             {{#if newEntry}}
             <span>Already have an account?  </span><span class="signup redirect">Sign-in here!</span>
             {{else}}
-            <span>You're new?  </span><span class="signin redirect">Register here!</span>
+            <span>You're new?  </span><span class="login redirect">Register here!</span>
             {{/if}}
         </div>
     </div>
