--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -1,14 +1,23 @@
 <div class="navigation-bar">
     <div class="umovie-logo">
         <span id="expend-menu-icon"></span>
-        <a href="{{references}}"><img id="site-logo" src="url({{siteImageUrl}}"></a>
-        <div>Welcome, {{user}}!</div>
+        <a href="#{{references}}"><img id="site-logo" src="url({{siteImageUrl}}"></a>
+        <div id="greeting-message">Welcome, {{user}}!</div>
     </div>
     <div class="menu">
         <ul class="navigation-options">
             {{#each menuOption}}
-            <li><a href="{{references}}">{{name}}</a></li>
+            <li><a href="#{{references}}">{{name}}</a></li>
             {{/each}}
+            {{/if}}
+            {{#if connected}}
+            {{#each menuOptionConnected}}
+            <li><a href="#{{references}}">{{name}}</a></li>
+            {{/each}}
+            {{#each menuOptionDisconnected}}
+            <li><a href="#{{references}}">{{name}}</a></li>
+            {{/each}}
+            {{else}}
         </ul>
     </div>
     <div class="search-bar">
