login system fonctionnel, now to the signing-up part

--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -8,7 +8,7 @@
     </div>
     <div class="newEntry">
         <div>
-            <span href="#" class="submitAuthentication">This should be a login button, with a bit of css</span>
+            <span class="submitAuthentication">This should be a login button, with a bit of css</span>
         </div>
         <div class="switch-authentication">
             {{#if newEntry}}
