--- a/js/templates/home.html
+++ b/js/templates/home.html
@@ -1,5 +1,6 @@
-<div class="carousel">Top 10 movies carousel</div>
-<div class="movie-browser">
-    <h1>{{title}}</h1>
-    <div class="favorite">{{movie}}</div>
+<div class="movieContainer">
+    <div class="movie-browser">
+        <h1>{{title}}</h1>
+        <div class="favorite">{{movie}}</div>
+    </div>
 </div>
