--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -4,16 +4,20 @@
     <link rel="stylesheet" href="../../css/actorCss.css" type="text/css">
 </head>
 
-<div class="actor-browser">
+<div class="actor">
     <div class="info">
-        <div></div><h1 id="header">{{name}}</h1></div>
-        <p>{{genre}}</p>
-        <img src="{{image}}">
+        <div><h1 id="header"><!--{{name}} --> Brad Pitt</h1></div>
+        <p><!--{{genre}} --> Action</p>
+       <!-- <img src="{{image}}"> -->
+        <img id="imgActor" src="../../img/imgActor.jpg">
         <div>
-           <a href="#{{itunesLink}}"> <img src="url({{imageActor}})"></a>
+            <!--<a href="#{{itunesLink}}"> <img src="url({{imageActor}})"></a> -->
+            <a href="https://itunes.apple.com/us/artist/brad-pitt/id272994458"> <img id="ilogo" src="../../img/itunesLogo.png"> </a>
             <p>Lien Itunes</p>
         </div>
     </div>
+
+
     <div class="movie-list">
         <p>Movies</p>
         <div class="carousel">
@@ -21,3 +25,4 @@
         </div>
     </div>
 </div>
+
