--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -6,13 +6,11 @@
 
 <div class="actor">
     <div class="info">
-        <div><h1 id="header"><!--{{name}} --> Brad Pitt</h1></div>
-        <p><!--{{genre}} --> Action</p>
-       <!-- <img src="{{image}}"> -->
-        <img id="imgActor" src="../../img/imgActor.jpg">
+        <div><h1 id="header">{{name}}</h1></div>
+        <p>{{genre}}</p>
+        <img id="imgActor" src="{{image}}">
         <div>
-            <!--<a href="#{{itunesLink}}"> <img src="url({{imageActor}})"></a> -->
-            <a href="https://itunes.apple.com/us/artist/brad-pitt/id272994458"> <img id="ilogo" src="../../img/itunesLogo.png"> </a>
+            <a href="#{{itunesLink}}"> <img src="url({{imageActor}})"></a> <img id="ilogo" src="../../img/itunesLogo.png"> </a>
             <p>Lien Itunes</p>
         </div>
     </div>
