fixed pictures and template

--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -1,16 +1,10 @@
-
-
-<head>
-    <link rel="stylesheet" href="../../css/actorCss.css" type="text/css">
-</head>
-
 <div class="actor">
     <div class="info">
         <div><h1 id="header">{{name}}</h1></div>
         <p>{{genre}}</p>
-        <img id="imgActor" src="{{image}}">
+        <img id="imgActor" src="url({{imageActor}}">
         <div>
-            <a href="#{{itunesLink}}"> <img src="url({{imageActor}})"></a> <img id="ilogo" src="../../img/itunesLogo.png"> </a>
+            <a href="#{{itunesLink}}"></a> <img id="ilogo" src="url(../../img/itunesLogo.png"> </a>
             <p>Lien Itunes</p>
         </div>
     </div>
