--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -5,8 +5,9 @@
 </head>
 
 <div class="actor">
+    <div></div>
     <div class="info">
-        <div><h1 id="header"><!--{{name}} --> Brad Pitt</h1></div>
+
         <p><!--{{genre}} --> Action</p>
        <!-- <img src="{{image}}"> -->
         <img id="imgActor" src="../../img/imgActor.jpg">
