looks like everything's comming into place

--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -1,5 +1,7 @@
-<div class="carousel"> movies carousel</div>
 <div class="movie-browser">
-    <h1>{{title}}</h1>
+    <div class="movieCover"><img  src="img/movie/wolfOfWallStreet.jpg"></div>
+    <span><h1 class="movieTitle">{{title}}</h1></span>
+    <div class=""></div>
     <div class="favorite">{{movie}}</div>
+    <a class="watchButton" href="">Watch Movie</a>
 </div>
