actor template terminé (Sauf pour les previews de film) CSS pour Mobile fini, Tablette et Desktop en cours

--- a/css/actorCss.css
+++ b/css/actorCss.css
@@ -1,38 +1,82 @@
-#header {
-    max-width: 100%;
-    font-size: 200%;
-    font-weight: bold;
-   /* color: white;*/
-    margin: 0;
-}
+/* POUR LE MOBILE*/
+
 
 .actor {
     max-width: 100%;
     width: 100%;
 }
 
-#imgActor {
-    max-width: 10%;
-}
-
-#ilogo {
-    max-width: 5%;
-}
-
-
 .info {
+    overflow: auto;
+    width: 100%;
+    height: auto;
+    position: relative;
+}
+
+.imgActor {
+    max-width: 45%;
+    height: auto;
     float: left;
-    width: 45%;
+    margin: 2.5%;
+
+
+
 }
+.itunes{
+    max-width: 45%;
+    margin: 2.5%;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.ilogo {
+    max-width: 50%;
+    margin: 25% 25% 10% 25%;
+
+}
+#centre{
+    text-align: center;
+    margin-top: 0;
+}
+
+.description {
+    width: 100%;
+}
+
 .movie-list {
-    float: right;
-    width: 45%;
+    max-width: 100%;
 }
 
 
-@media screen and (max-width: 640px){
+@media screen and (min-width: 640px){
 
-    #header{
-        font-size: 100%;
+
+    .description {
+        float: right;
+        width: 65%;
+
+    }
+    .info {
+        float: left;
+        width: 30%;
+    }
+    .imgActor{
+        float: none;
+        max-width: 100%;
+    }
+    .itunes{
+        max-width: 100%;
+        position: relative;
+    }
+    .ilogo{
+        margin: 5% 25% 5% 25%;
     }
 }
+
+@media screen and (min-width: 960px){
+
+
+}
+
+/* phone = 640px, Tablet = 960px */
