--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -1,32 +1,36 @@
 <div class="actor">
-    <div></div>
+
+    <div>
+        <h1>{{name}}</h1>
+        <h2>Genre principal : {{genre}}</h2>
+    </div>
+
     <div class="info">
-<<<<<<< HEAD
 
-        <p><!--{{genre}} --> Action</p>
-       <!-- <img src="{{image}}"> -->
-        <img id="imgActor" src="../../img/imgActor.jpg">
-=======
-        <div><h1 id="header">{{name}}</h1></div>
-        <p>{{genre}}</p>
-<<<<<<< HEAD
-        <img id="imgActor" src="{{image}}">
->>>>>>> origin/Actor
-=======
-        <img id="imgActor" src="url({{imageActor}}">
->>>>>>> ea960a9aa2f9776fcb08543ade12c415681ee0e4
-        <div>
-            <a href="#{{itunesLink}}"></a> <img id="ilogo" src="url(../../img/itunesLogo.png"> </a>
-            <p>Lien Itunes</p>
+        <img class="imgActor" src="url({{imageActor}}">
+
+        <div class="itunes">
+            <a href="{{itunesLink}}"><img class="ilogo" src="url(../../img/itunesLogo.png"></a>  </a>
+            <p id="centre">Apple Store </p>
         </div>
     </div>
 
+    <div class="description" >
+        <p> Ceci est une longue description.</p>
+        <p> Ceci est une longue description.</p>
+        <p> Ceci est une longue description.</p>
 
-    <div class="movie-list">
-        <p>Movies</p>
-        <div class="carousel">
 
-        </div>
+
+
     </div>
+
+    <div>
+        <h2>Movies</h2>
+    </div>
+    <div>
+
+    </div>
+
 </div>
 
