--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -1,4 +1,6 @@
 <div class="authentification">
+    <div class="movieCover"><img src="http://www.forgetthebox.net/wp-content/uploads/2013/05/Iron-Man-3-2013-Movie-Title-Banner.jpg"></div>
+
     <div class="inputFields">
         {{#each inputField}}
         <div class="{{inputName}}-box">
