Add some css, not finished yet

--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -1,6 +1,5 @@
 <div class="authentification">
-    <div class="movieCover"><img src="http://www.forgetthebox.net/wp-content/uploads/2013/05/Iron-Man-3-2013-Movie-Title-Banner.jpg"></div>
-
+    <img src="http://www.forgetthebox.net/wp-content/uploads/2013/05/Iron-Man-3-2013-Movie-Title-Banner.jpg"></img>
     <div class="inputFields">
         {{#each inputField}}
         <div class="{{inputName}}-box">
