--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 #site-logo {
     width: 128px;
     margin: -2.25em 0 0 0;
-    padding-left: 10px;
+    left: 0px;
+    background: transparent;
+
 }
 
 html {
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    -moz-osx-font-smoothing: grayscale;
-    font-size: 15px;
+    font-size: 16px;
     background-color: black;
     color: white;
 }
@@ -87,36 +88,50 @@ button {
     color: white;
 }
 
-.navigation-options li:hover {
-    background-color: #181818;
+.menu .navigation-options li a:hover {
+    color: white;
+    font-style: bold;
+    font-size: 20px;
 }
 
+
+.search-bar li a:hover {
+    color: white;
+    font-style: bold;
+    font-size: 20px;
+}
+
+.search-bar {
+    margin: 0 0 0 0;
+    padding: 10px 0 0 0;
+}
 .search-bar > li {
     color: white;
     margin-top: 0px;
-    text-decoration: none;
     padding: 2px 10%;
     display: block;
     float: right;
 }
 
-.search-bar li:hover{
-    background-color: #181818;
-}
 .search-bar > div {
     display: block;
     float: right;
 }
 
 .search-input {
+    display: none;
     padding-right: 0;
     padding-left: 0;
     border-right: 0;
     border-left: 0;
 }
 
+.research-options{
+    /*color: transparent;*/
+}
+
 .go-research {
-    background-image: url('../img/goSearchIcon.png');
+    background-image: url("../img/SearchIcon.png");
     background-color: white;
     width: 18px;
     height: 17px;
@@ -133,7 +148,7 @@ button {
 }
 
 .search-image {
-    background-image: url('../img/searchIcon.png');
+    background-image: url("https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-128.png");
     background-color: white;
     width: 17px;
     height: 16px;
@@ -144,26 +159,47 @@ button {
     padding-top: 2px;
     padding-right: 2px;
     padding-bottom: 1px;
-    border-top: 2px inset ThreeDLightShadow;
-    border-left: 2px inset ThreeDLightShadow;
-    border-bottom: 2px inset ThreeDLightShadow;
+
 }
 
 .navigation-options a {
     text-decoration: none;
+    color: #96948B;
+}
+
+.search-bar a {
+    text-decoration: none;
     color: #96948A;
 }
 
+#container #menu-content {
+    height: 70px;
+    position: relative;
+}
+
 #container #menu-content .navigation-bar {
+    height: 70px;
+    box-sizing: border-box;
+    padding: 0px 4%;
     width: 100%;
-    padding: 5px 50px 5px 0;
-    background: black;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 60%, transparent);
+
+    position: fixed;
+    top: 0px;
+    margin: 0px;
+    width: 100%;
+    z-index: 100;
+
 }
 
 #container #content {
     background: black;
-    
+    position: relative;
+    z-index: 0;
+    margin-top: -70px;
+
 }
+
 .open {
     display: block;
     left: 0px;
@@ -181,10 +217,15 @@ button {
     background: black;
 }
 
+.umovie-logo{
+    margin-top: 15px;
+}
+
 @media (min-width: 700px) {
     #site-logo {
-        width: 128px;
-        margin: -2.25em 0 0 0;
+
+        width: 138px;
+        margin: 0 0 0 0;
     }
 
     .navigation-bar {
@@ -199,7 +240,7 @@ button {
     }
 
     .navigation-options {
-        background: black;
+        background: transparent;
         padding: 1.3em 0.5em 1em 0.5em;
         position: inherit;
         width: intrinsic; /* Safari/WebKit uses a non-standard name */
@@ -264,7 +305,7 @@ button {
         text-decoration: none;
 
     }
-    
+
 .hamburger {
     width: 30px;
     height: 30px;
