--- a/js/templates/home.html
+++ b/js/templates/home.html
@@ -1,4 +1,5 @@
 <div class="movieContainer">
+    <div class="movieCover"><img src="{{url}}"></div>
     <div class="movie-browser">
         <h1>{{title}}</h1>
         <div class="favorite">{{movie}}</div>
