--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -27,7 +27,7 @@
     <div class="search-bar">
         <div class="input-bar">
             <span class="search-image"></span>
-            <input class="search-input">
+            <input placeholder="Search..." class="search-input">
             <span class="go-research"></span>
         </div>
         <div class="research-options collapsed">advanced research</div>
