--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -14,11 +14,14 @@
 
         </ul>
     </div>
-    {{#if user}}
-    <div id="greeting-message">{{user}}</div>
-    {{/if}}
 
     <div class="search-bar">
+        <!-- Change this for the moment -->
+        <!-- {{#if user}} -->
+        <!-- <div id="greeting-message">{{user}}</div> -->
+        <!-- {{/if}}  -->
+        <li><a href="#" class="greeting-message">Luis</a></li>
+
         {{#if connected}}
         {{#each menuOptionConnected}}
         <li><a href="#{{references}}" class="{{position}}">{{name}}</a></li>
@@ -28,11 +31,15 @@
         <li><a href="#{{references}}" class="{{position}}">{{name}}</a></li>
         {{/each}}
         {{/if}}
-        <div class="input-bar">
-            <span class="search-image"></span>
-            <input class="search-input">
-            <span class="go-research"></span>
+
+        <div class="search-container">
+            <a class="search-button" href="#"></a>
+            <div id="search-input">
+                <input type="text" id="s" name="s" value="Search something...">
+            </div>
         </div>
+            <!-- remove for the moment, not useful
+            <span class="go-research"></span> -->
         <div class="research-options collapsed">advanced research</div>
     </div>
 </div>
